@@ -214,7 +214,10 @@ difference in test.
    "float": 0.23,
    "int": 1,
    "null": null,
-   "string": "bar"
+   "string": "bar",
+   "struct": {
+     "string": "foo"
+   }
  }
  END
  my $json_struct2 = <<'END';
@@ -223,7 +226,10 @@ difference in test.
    "float": 1.23,
    "int": 2,
    "null": null,
-   "string": "foo"
+   "string": "foo",
+   "struct": {
+     "string": "bar"
+   }
  }
  END
  cmp_json_types($json_struct1, $json_struct2, 'Structured JSON strings.');
